# github_trending_daily

./: .gitignore  README.md  app.py  github_trending.py  pyproject.toml
output/: trending_daily.html
templates/: trending.html
